src/test/deca/context/invalid/arithmetic-wrongTypeModulo.deca
// Description:
//    Affectation avec des types non int pour le modulo
//
// Résultats:
//    ligne 11: type incompatible
//
// Historique:
//    Créé le 11/01/2024

{
    println(3 % 2.1);
}